--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compile": "tsc index.ts && node index.js",
     "day1": "tsc src/day1.ts && node src/day1.js",
     "day2": "tsc src/day2.ts && node src/day2.js",
+    "day3": "tsc src/day3.ts && node src/day3.js",
     "day8": "tsc src/day8.ts && node src/day8.js",
     "day9": "tsc src/day9.ts && node src/day9.js",
     "test": "echo \"Error: no test specified\" && exit 1"
